lesson4/combined-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combined-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /


spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
      
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80
  

  - host: api.myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
