lesson4/ingress-with-default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-default

spec:
  defaultBackend:
    service:
      name: default-backend-service
      port:
        number: 80

  rules:
  - host: app1.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
